samples/_failures_safe/1761147147_1e5361_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ff7ab57.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_6ff7ab57.c:182:9: error: missing terminating " character
  182 |         "
      |         ^
./samples/SAFE/__tmp_6ff7ab57.c:182:9: error: expected expression at end of input
./samples/SAFE/__tmp_6ff7ab57.c:182:9: error: expected declaration or statement at end of input
